<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/item_movie_image"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:alpha="0.9"
        android:contentDescription="@string/image_description_backdrop"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/moonrise_kingdom" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_movie_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_item_imdb_image"
                android:layout_width="49dp"
                android:layout_height="24dp"
                android:contentDescription="@string/image_description_imdb_icon"
                android:src="@drawable/imdb_logo" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="4dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/icon_description_rate_star"
                android:src="@drawable/rate_icon" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/movie_item_rate"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/roboto_medium"
                android:letterSpacing="0.08"
                android:maxLines="1"
                android:textColor="@color/text_black"
                android:textSize="13sp"
                tools:text="7.8" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/roboto_medium"
                android:letterSpacing="0.08"
                android:maxLines="1"
                android:text="@string/movie_rate_max_value"
                android:textColor="@color/text_dark_gray"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="4dp"
                android:layout_height="4dp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/shape_description_yellow_dot"
                android:src="@drawable/yellow_dot" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/movie_item_release_date"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/roboto_medium"
                android:letterSpacing="0.08"
                android:maxLines="1"
                android:textColor="@color/text_black"
                android:textSize="13sp"
                tools:text="15.06.2021" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/movie_item_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_bold"
            android:letterSpacing="0.38"
            android:maxLines="1"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Moonrise Kingdom (2012)" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/movie_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:letterSpacing="0.24"
                android:scrollbars="vertical"
                android:textColor="@color/text_black"
                android:textSize="15sp"
                tools:text="Moonrise Kingdom is a 2012 American coming-of-age comedy-drama film directed by Wes Anderson, ..." />
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/error_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/something_went_wrong"
        android:textColor="@color/text_black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>